--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,5 +6,5 @@
   <input type="email" name="email" placeholder="email"/>
   <label for=password>Password</label>
   <input type="password" name="password" placeholder="password"/>
-  <input type="submit" value="Login"/>
+  <input type="submit" value="Register"/>
 </form>
