--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <h1>Login</h1>
+<div class="error">{{message}}</div>
 <form action="/login" method="post">
   <label for=email>Email</label>
   <input type="email" name="email" placeholder="email"/>
